# clean-ollama

./: .gitignore  LICENSE  README.md  pyproject.toml
clean_ollama/: __init__.py  client.py
